@@ -1,3 +1,8 @@
+2006-07-27  Mark Grondona <mgrondona@llnl.gov>
+
+	* src/common/hostlist.c : Update to latest rev from LSD-Tools, which
+	  fixes some bugs found by Coverity.
+
 2006-07-26  Mark Grondona <mgrondona@llnl.gov>
 
 	* src/pdsh/dsh.h, src/pdsh/dsh.c : Allow ctrl-Z (SIGTSTP) issued
